<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.activities.AddAlarmActivity"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <ScrollView

        android:layout_marginBottom="@dimen/margin_left_right_cardview"
        android:layout_above="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:paddingTop="@dimen/margin_top_cardview"
        android:paddingLeft="@dimen/margin_left_right_cardview"
        android:paddingRight="@dimen/margin_left_right_cardview">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


                <LinearLayout
                    android:background="@drawable/bg_add_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <TimePicker
                        android:id="@+id/timePickerAddAlarm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:timePickerMode="spinner"></TimePicker>
                </LinearLayout>




                <android.support.constraint.ConstraintLayout
                    android:id="@+id/constraintLayoutAlarmMode"
                    android:background="@drawable/bg_add_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_left_right_cardview">

                    <ImageView
                        android:id="@+id/imageViewAlarmMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_alarm_black_24dp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/way_to_turn_off"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize_title_addalarm"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toRightOf="@+id/imageViewAlarmMode"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewAlarmMode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/default_way"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toRightOf="@+id/imageViewAlarmMode"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"
                        app:layout_constraintVertical_bias="0.0" />
                </android.support.constraint.ConstraintLayout>




                <android.support.constraint.ConstraintLayout
                    android:id="@+id/constraintLayoutSelectTune"
                    android:background="@drawable/bg_add_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_left_right_cardview">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/ring_tone"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize_title_addalarm"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewTuneTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:gravity="right"
                        android:text="@string/default_ring_tone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toRightOf="@+id/textView5"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.571" />
                </android.support.constraint.ConstraintLayout>


                <android.support.constraint.ConstraintLayout
                    android:id="@+id/constraintLayoutRepeate"
                    android:background="@drawable/bg_add_alarm"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_left_right_cardview">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/repeate"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize_title_addalarm"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/not_repeate"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.521" />
                </android.support.constraint.ConstraintLayout>




                <android.support.constraint.ConstraintLayout
                    android:background="@drawable/bg_add_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_left_right_cardview">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/turn_vibrate_on"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize_title_addalarm"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Switch
                        android:id="@+id/switch2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>



                <android.support.constraint.ConstraintLayout
                    android:id="@+id/constraintLayoutTitle"
                    android:background="@drawable/bg_add_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_left_right_cardview">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/alarm_title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize_title_addalarm"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/textView8"
                        app:layout_constraintVertical_bias="0.48" />

                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.521"
                        app:layout_constraintLeft_toRightOf="@+id/textView8"
                        android:layout_marginLeft="16dp" />
                </android.support.constraint.ConstraintLayout>


        </LinearLayout>
    </ScrollView>





</LinearLayout>